--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -22,6 +22,12 @@ p {
 	font-family: sans-serif;
 }
 
+a {
+    color: #337ab7;
+    text-decoration: none;
+    background-color: transparent;
+}
+
 .container {
 	border: none;
 	margin-left: auto;
